update GitBook blog url

--- a/2020-04/2020-04-18-使用GitBook.md
+++ b/2020-04/2020-04-18-使用GitBook.md
@@ -143,7 +143,7 @@
 1. 登录[gitbook](https://app.gitbook.com/)，进入dashboard，创建对应的space
     ![](https://ipasser.oss-cn-beijing.aliyuncs.com/images/blog/20200418155243.png)
 1. 创建好后和指定的github仓库分支link，后面只要github代码更新，都会实时更新到gitbook
-1. 现在就可以通过浏览器访问到了，例如我的[blog](https://ipasser.gitbook.io/blog/)
+1. 现在就可以通过浏览器访问到了，例如我的[blog](https://icankeep.gitbook.io/blog/)
 
 
 
