20210404 Spring MVC and 消息队列

--- a/2021-04/2021-04-01-Java虚拟机.md
+++ b/2021-04/2021-04-01-Java虚拟机.md
@@ -24,6 +24,7 @@
     * [类加载器分类](#类加载器分类)
     * [双亲委派模型](#双亲委派模型)
     * [自定义类加载器实现](#自定义类加载器实现)
+    * [破坏双亲委派模型](#破坏双亲委派模型)
 * [参考资料](#参考资料)
 <!-- GFM-TOC -->
 
