--- a/2019-03/2019-03-14-MySQL中索引.md
+++ b/2019-03/2019-03-14-MySQL中索引.md
@@ -35,3 +35,8 @@ B-Tree索引：
  - 复合索引的情况下，假如查询条件不包含索引列最左边部分，即不满足最左原则，是不会使用复合索引的，右边可以没有，左边和中间不能缺
  - 如果MySQL估计使用索引比全表扫描更慢，则不使用索引
  - 用or分割开的条件，每一列都要有索引才能使用索引
+
+
+## 推荐阅读
+https://github.com/Snailclimb/JavaGuide/blob/master/docs/database/MySQL%20Index.md
+https://juejin.cn/post/6844903645125820424
