--- a/2019-03/2019-03-14-MySQL存储引擎.md
+++ b/2019-03/2019-03-14-MySQL存储引擎.md
@@ -30,7 +30,8 @@ alter table table_name engine = innodb;
 ```
 
 ## MyISAM
-不支持事务，也不支持外键，其优势是访问速度快，表锁，支持的索引类型为B树索引（底层为B+树）、全文索引、R树索引，索引缓存，数据可压缩，批量插入的速度快，支持并发插入，如果对事务完整性没有要求或者以SELECT、INSERT为主的应用基本上都可以使用这个引擎来创建表。
+不支持事务，也不支持外键，其优势是访问速度快，表锁，支持的索引类型为B树索引（底层为B+树）、全文索引、R树索引，索引缓存，数据可压缩，批量插入的速度快，
+支持并发插入，如果对事务完整性没有要求或者以SELECT、INSERT为主的应用基本上都可以使用这个引擎来创建表。
 
 每个MyISAM在磁盘上存储成三个文件，其文件名都和表名相同，都扩展名分别是：
 
@@ -44,14 +45,18 @@ MyISAM还支持三种不同的存储格式，分别是：
  - 动态表
  - 压缩表
 
-其中静态表示默认的存储格式，静态表中的字段都是非变长字段，这样每个记录都是固定长度的，这种存储方式的优点是存储非常迅速，容易缓存，出现故障容易恢复，缺点是占用的空间通常比动态表多。静态表中的数据在存储时会按照列的宽度补足空格，但是在应用访问时会去掉，如果需要保存的内容后面本来就带有空格，也会被去掉。
+其中静态表示默认的存储格式，静态表中的字段都是非变长字段，这样每个记录都是固定长度的，这种存储方式的优点是存储非常迅速，
+容易缓存，出现故障容易恢复，缺点是占用的空间通常比动态表多。静态表中的数据在存储时会按照列的宽度补足空格，但是在应用访问时会去掉，
+如果需要保存的内容后面本来就带有空格，也会被去掉。
 
-动态表包含变长字段，记录不是固定长度的，这样存储的优点是占用的空间相对较少，但是频繁的更新和删除记录会产生碎片，需要定期执行OPTIMIZE TABLE语句或myisamchk-r命令来改善性能，并且出现故障时恢复相对比较困难。
+动态表包含变长字段，记录不是固定长度的，这样存储的优点是占用的空间相对较少，
+但是频繁的更新和删除记录会产生碎片，需要定期执行OPTIMIZE TABLE语句或myisamchk-r命令来改善性能，并且出现故障时恢复相对比较困难。
 
 压缩表由myisampack工具创建，占据非常小的空间，因为每个记录是被单独压缩的，所以只有非常小的访问开支。
 
 ## InnoDB
-InnoDB存储引擎提供了具有提交、回滚和崩溃恢复能力的事务安全。而且MySQL引擎中只有InnoDB支持外键，但是对比于MyISAM的存储引擎，InnoDB的写的处理效率差一些，并且会占用更多的磁盘空间以保留数据和索引（数据缓存，索引缓存），支持行锁，支持B树索引和集群索引。
+InnoDB存储引擎提供了具有提交、回滚和崩溃恢复能力的事务安全。而且MySQL引擎中只有InnoDB支持外键，但是对比于MyISAM的存储引擎，
+InnoDB的写的处理效率差一些，并且会占用更多的磁盘空间以保留数据和索引（数据缓存，索引缓存），支持行锁，支持B树索引和集群索引。
 
 InnoDB的存储表和索引有一下两种方式：
 
@@ -59,9 +64,11 @@ InnoDB的存储表和索引有一下两种方式：
  - 使用多表空间存储，这种方式创建的表的表结构仍然保存在.frm文件中，但是每个表的数据和索引单独保存在.ibd中。
 
 ## MEMORY
-Memory存储引擎使用存在于内存总的内容来创建表。每个Memory表只实际对应于一个磁盘文件.frm，Memory类型的表访问非常快，因为它的数据是放在内存中的，支持Hash索引、B树索引，并且默认使用Hash索引，但是一旦服务关闭，表中的数据就会丢失掉。
+Memory存储引擎使用存在于内存总的内容来创建表。每个Memory表只实际对应于一个磁盘文件.frm，Memory类型的表访问非常快，
+因为它的数据是放在内存中的，支持Hash索引、B树索引，并且默认使用Hash索引，但是一旦服务关闭，表中的数据就会丢失掉。
 
-Memory表主要用于那些内容变化不太频繁的代码表，或者作为统计操作的中间结果表，标语高效地对中间结果分析并得到最终的统计结果。对该类型表更新操作要谨慎，因为数据并没有写入到磁盘中，所以一定要对下次重新启动服务后如何获得这些修改后的数据有所考虑。
+Memory表主要用于那些内容变化不太频繁的代码表，或者作为统计操作的中间结果表，标语高效地对中间结果分析并得到最终的统计结果。
+对该类型表更新操作要谨慎，因为数据并没有写入到磁盘中，所以一定要对下次重新启动服务后如何获得这些修改后的数据有所考虑。
 
 ## Merge
 用于将一系列等同的MyISAM表以逻辑方式组合在一起，并作为一个对象引用它们。
